--- a/src/Styles/Structure.css
+++ b/src/Styles/Structure.css
@@ -1,3 +1,17 @@
 .tile{
-    float:left
+    float:left;
+    height: 120px;
+    width: 120px;
+}
+
+.blank{
+    color: black;
+    float:left;
+}
+
+.grid{
+    position: fixed;
+    top: 50%;
+    left:50%;
+    transform: translate(-50%, -50%);
 }
