--- a/src/Styles/Structure.css
+++ b/src/Styles/Structure.css
@@ -1,21 +1,13 @@
-.tile {
-  float: left;
-  height: 120px;
-  width: 120px;
-}
-
 .blank {
   color: black;
   float: left;
 }
 
 .grid {
-  position: relative;
+  position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  height: auto;
-  width: auto;
 }
 
 .card-image {
