--- a/src/Styles/Structure.css
+++ b/src/Styles/Structure.css
@@ -4,10 +4,11 @@
 }
 
 .grid {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  /* position: absolute; */
+  margin: auto;
+  /* top: 50%; */
+  /* left: 50%; */
+  /* transform: translate(-50%, -50%); */
 }
 
 .card-image {
